<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_help"
        android:title="Help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="About"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/delete"
        android:title="@string/delete_this_item"
        app:showAsAction="always" />


</menu>