...
            android:minHeight="48dp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search" />

        <Button
            android:icon="@drawable/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Favorites"
...
