...
            <TextView
                android:id="@+id/details_Spoonacular_Source_Url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/details_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"/>
        </LinearLayout>

...
